--- a/Math/Math.csproj
+++ b/Math/Math.csproj
@@ -61,18 +61,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DocGenerator.cs" />
     <Compile Include="Equation.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormMath.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormMath.Designer.cs">
+      <DependentUpon>FormMath.cs</DependentUpon>
     </Compile>
     <Compile Include="MyRandom.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormMath.resx">
+      <DependentUpon>FormMath.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
